--- a/projects/discussion-ui/package.json
+++ b/projects/discussion-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@project-sunbird/discussions-ui-v8",
-  "version": "2.6.0-beta.3",
+  "name": "compass-discussions-ui-v8",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sunbird-Ed/discussions-UI.git"
